samples/_failures_safe/1761647692_d15155_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af72236d.c: In function ‘main’:
./samples/SAFE/__tmp_af72236d.c:157:5: error: expected declaration or statement at end of input
  157 |     if (len > 0 && input[len - 1] == '\n') {
      |     ^~
./samples/SAFE/__tmp_af72236d.c:157:5: error: expected declaration or statement at end of input
